# hestia

./: .gitignore  Cargo.toml  PLAN.md  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: auto-merge.yaml  ci.yml  gc.yml  perf.yml  release.yml
action/: README.md  action.yml  main.js  post.js
nix/: crane.nix  devShell.nix  package.nix  treefmt.nix
src/: chunker.rs  cli.rs  drain.rs  gc.rs  hook.rs  lib.rs  main.rs  manifest.rs  pathinfo.rs  pipeline.rs  protocol.rs  refnorm.rs  serve.rs  substituter.rs  upstream.rs
src/gha/: blob.rs  mod.rs  rest.rs  savemutable.rs  twirp.rs
tests/: chunker_e2e.rs  failure_modes.rs  gc.rs  gha_blob_robustness.rs  gha_fake.rs  gha_real.rs  gha_rest_robustness.rs  hook_client.rs  pathinfo_real.rs  pipeline_consistency.rs  pipeline_e2e.rs  serve_daemon.rs  substituter.rs
tests/support/: fake_gha.rs  mod.rs  sim.rs  store.rs
