[package]
name = "hestia"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Nix binary cache backed by the GitHub Actions cache"
repository = "https://github.com/nix-community/hestia"

[dependencies]
# CLI / runtime
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "signal",
] }

# Serialization (manifest = CBOR + zstd)
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
zstd = "0.13"

# HTTP client (Twirp, GitHub REST, Azure blob) and substituter server
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "json",
] }
axum = "0.8"

# Content-defined chunking
fastcdc = "4"

# Harmonia crates (not on crates.io; pinned to a specific rev)
harmonia-file-core = { git = "https://github.com/nix-community/harmonia", rev = "3ef11b5bcf6db6b645a3de672950b9c55bcdc2ba" }
harmonia-file-nar = { git = "https://github.com/nix-community/harmonia", rev = "3ef11b5bcf6db6b645a3de672950b9c55bcdc2ba" }
harmonia-store-nar-info = { git = "https://github.com/nix-community/harmonia", rev = "3ef11b5bcf6db6b645a3de672950b9c55bcdc2ba" }
harmonia-store-path = { git = "https://github.com/nix-community/harmonia", rev = "3ef11b5bcf6db6b645a3de672950b9c55bcdc2ba" }
harmonia-store-path-info = { git = "https://github.com/nix-community/harmonia", rev = "3ef11b5bcf6db6b645a3de672950b9c55bcdc2ba" }
harmonia-store-remote = { git = "https://github.com/nix-community/harmonia", rev = "3ef11b5bcf6db6b645a3de672950b9c55bcdc2ba" }
harmonia-utils-base-encoding = { git = "https://github.com/nix-community/harmonia", rev = "3ef11b5bcf6db6b645a3de672950b9c55bcdc2ba" }
harmonia-utils-hash = { git = "https://github.com/nix-community/harmonia", rev = "3ef11b5bcf6db6b645a3de672950b9c55bcdc2ba" }
harmonia-utils-io = { git = "https://github.com/nix-community/harmonia", rev = "3ef11b5bcf6db6b645a3de672950b9c55bcdc2ba" }
harmonia-utils-signature = { git = "https://github.com/nix-community/harmonia", rev = "3ef11b5bcf6db6b645a3de672950b9c55bcdc2ba" }
